--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-slide projects-slide">
+                        <div class="project-text card-column" style="flex:1">
+                            <h3 class="project-title">Аудиторное задание 1</h3>
+                            <p class="project-text">Треугольник</p>
+                            <div class="project-link">
+                                <a href="./cw/cw1/index.html" class="project-link-inner">Ссылка</a>
+                            </div>
+                        </div>
+                    </div>
                     <!-- <div class="swiper-slide">Slide 3</div> -->
                     </div>
                     <!-- If we need pagination -->
