--- a/index.html
+++ b/index.html
@@ -173,10 +173,28 @@
                     </div>
                     <div class="swiper-slide projects-slide">
                         <div class="project-text card-column" style="flex:1">
+                            <h3 class="project-title">Домашняя работа 3</h3>
+                            <p>Вариант 3</p>
+                            <div class="project-link">
+                                <a href="./hw/hw3/index.html" class="project-link-inner">Ссылка</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide projects-slide">
+                        <div class="project-text card-column" style="flex:1">
                             <h3 class="project-title">Аудиторное задание 1</h3>
                             <p class="project-text">Треугольник</p>
                             <div class="project-link">
                                 <a href="./cw/cw1/index.html" class="project-link-inner">Ссылка</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide projects-slide">
+                        <div class="project-text card-column" style="flex:1">
+                            <h3 class="project-title">Домашнее задание</h3>
+                            <p class="project-text">Заказ - Автобусы</p>
+                            <div class="project-link">
+                                <a href="./hw/hw_order/index.php" class="project-link-inner">Ссылка</a>
                             </div>
                         </div>
                     </div>
